Log in
Skip to main content
Skip to sidebar
Dashboards
Projects
Issues
Give feedback to Atlassian
Help
Jira Core help
Keyboard Shortcuts
About Jira
Jira Credits
Log In
Qt Creator
QTCREATORBUG-30371
Crash in using axivion issues pane
Log In
Closed
Export
null
XML
Word
Printable
Details
Type:
Bug
Resolution:
Fixed
Priority:
P1: Critical
Fix Version/s:
Qt Creator 13.0.0-beta2
Affects Version/s:
Qt Creator 13.0.0-beta1
Component/s:
Axivion
Labels:
beta1300
Platform/s:
Linux/X11
Commits:
b9671bcff (13.0)
Attachments
Gerrit Reviews
Options
Issue Only
Show All Reviews
Show Open Reviews
Show All Issues
Show Open Issues
No reviews matched the request. Check your Options in the drop-down menu of this sections header.
Activity
People
Assignee:
Christian Stenger
Reporter:
Christian Stenger
Votes:
0
Vote for this issue
Watchers:
2
Start watching this issue
Dates
Created:
14 Feb '24 09:00
Updated:
15 Feb '24 12:21
Resolved:
15 Feb '24 12:21
Gerrit Reviews
There are no open Gerrit changes
Show
There is 1 closed Gerrit change
Hide
There is 1 closed Gerrit change
Axivion: Fix disabling filters
Gerrit Review: