Axivion: Fix disabling filters

Enabling and disabling a layout does not do so for
its child components which had been assumed.
Explicitly disable or enable filters to avoid
crashes when accessing them without a project info.

Fixes: QTCREATORBUG-30371
Change-Id: I56633dad4b3ffbb1c0c7c7d154c2af5d3c3cde6b
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>